--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "bundles/fugitive"]
-	path = bundles/fugitive
+[submodule "bundle/fugitive"]
+	path = bundle/fugitive
 	url = http://github.com/tpope/vim-fugitive.git
